--- a/theme.css
+++ b/theme.css
@@ -111,7 +111,7 @@ All rows must end with a semi-colon.                      */
 }
 
 d-title {
-  background-image: url(Furano.jpeg);
+  background-image: url(Furano.jpg);
   background-repeat: repeat;
   background-size: 1500pt;
   background-position: center;
